Add toggle to enable/disable address validator. Also updated proxy url.

--- a/sitereg/src/app/modules/msp-update/pages/organization/organization-edit/organization-edit.component.html
+++ b/sitereg/src/app/modules/msp-update/pages/organization/organization-edit/organization-edit.component.html
@@ -9,7 +9,8 @@
     </div>
 
     <!-- Address Lookup -->
-    <common-address-validator id="addressLookup"
+    <common-address-validator *ngIf='isAddressValidatorEnabled'
+                              id="addressLookup"
                               formControlName="addressLookup"
                               label="Address Lookup (optional)"
                               [serviceUrl]="addressServiceUrl"
