--- a/sitereg/src/app/modules/msp-register/components/msp-register-organization/msp-register-organization.component.html
+++ b/sitereg/src/app/modules/msp-register/components/msp-register-organization/msp-register-organization.component.html
@@ -55,7 +55,8 @@
         </div>
 
         <!-- Address Lookup -->
-        <common-address-validator id="addressLookup"
+        <common-address-validator *ngIf='isAddressValidatorEnabled'
+                                  id="addressLookup"
                                   formControlName="addressLookup"
                                   label="Address Lookup (optional)"
                                   [serviceUrl]="addressServiceUrl"
